[mobile] layout bugfixes

--- a/src/assets/scss/modules/_content.scss
+++ b/src/assets/scss/modules/_content.scss
@@ -205,6 +205,8 @@ body {
 //
 //
 @mixin publication-formatting {
+  overflow-wrap: break-word;
+
   a {
     text-decoration: underline;
 
