--- a/src/assets/scss/modules/_navigation.scss
+++ b/src/assets/scss/modules/_navigation.scss
@@ -18,6 +18,8 @@ nav.menu-sign {
   width: 100%;
   top: 1rem;
   left: 0;
+  right: 0;
+  z-index: 99;
 
   a {
     -webkit-user-select: none;  /* Chrome all / Safari all */
@@ -56,6 +58,7 @@ nav.menu-sign {
   &.in-menu a {
     text-decoration: line-through;
     color: $blue;
+    z-index: 999;
   }
 }
 
@@ -66,10 +69,21 @@ nav.menu-sign {
   padding: 0;
   margin: 0;
 
+  max-height: 100%;
+  height: 100%;
+
+  z-index: 100;
+
   .main-container {
     min-height: 100%;
-    haight: 100%;
+    max-height: 100%;
+    height: 100%;
+
+    .main-grid {
+      margin-top: 0;
+    }
   }
+
   .main-content {
     @extend .grid-y;
     @extend .grid-frame;
@@ -151,26 +165,32 @@ nav.menu-sign {
 
     nav.links {
       @extend .cell;
-      @extend .shrink;
+      @extend .auto;
     }
 
     nav.bottom-links {
       @extend .cell;
       @extend .auto;
 
-      position: relative;
-
       text-align: right;
 
-      margin-bottom: 1rem;
+      padding-bottom: 1rem;
+
+      display: flex;
+      align-items: flex-end;
+      flex-direction: column;
+      justify-content: end;
 
       @include breakpoint(medium) {
+        padding-bottom: 0;
         margin-bottom: 2rem;
       }
 
+
       .bottom-links-container {
         position: absolute;
-        bottom: 0;
+        // bottom: 0;
+        top: 0;
         right: 0;
       }
     }
@@ -191,119 +211,3 @@ nav.menu-sign {
 //     @include xy-cell-offset(4);
 //   }
 // }
-
-
-
-
-
-
-//
-//
-// OLD STUFF
-//
-//
-// Navigation breakpoints
-.mobile-menu,
-.site-title-bar {
-  @include hide-for(medium);
-}
-
-.desktop-menu,
-.site-navigation .top-bar-left {
-  @include show-for(medium);
-}
-
-// Site title
-.site-desktop-title a {
-  font-weight: bold;
-}
-
-// Mobile menu
-.mobile-menu {
-  display: none; // prevents repaint caused by JS hiding menu onload
-}
-
-.off-canvas {
-  > ul.menu {
-    height: 100vh;
-    padding: 1rem;
-
-    a {
-      color: $white;
-      font-weight: 600;
-      font-size: rem-calc(15);
-    }
-  }
-
-  .menu .active > a { background-color: #ccc; }
-
-}
-
-.title-bar-title {
-  a {
-    font-size: 1rem;
-    color: #B9B9B9;
-  }
-}
-
-.mobile-menu,
-.mobile-off-canvas-menu {
-
-  .menu .is-active > a {
-    background-color: lighten($dark-nav-color, 5%);
-  }
-}
-
-// Tablet and desktop menu
-
-.top-bar {
-
-  .top-bar-title a {
-    font-size: 1rem;
-    color: #B9B9B9;
-    padding-left: 1rem;
-    line-height: 1.8;
-  }
-
-  .menu a {
-    color: #e6e6e6;
-    padding-top: 0;
-    padding-bottom: 0;
-    font-weight: bold;
-    font-size: 0.8rem;
-    line-height: 1;
-
-    &:hover:not(.button) {
-      background-color: #42525D;
-    }
-  }
-
-  .menu .active > a { background-color: #ccc; }
-
-  .menu>li:not(.menu-text)>a { padding: 1rem; }
-  .menu li:not(:last-child) { border-right: 1px solid #4e4e4e; }
-
-  .dropdown.menu .submenu { border: 0; }
-  .dropdown.menu .has-submenu.is-down-arrow a { padding-right: 1rem; }
-  .dropdown.menu .has-submenu.is-down-arrow > a::after { border: 0; }
-  .dropdown.menu:first-child > li.is-dropdown-submenu-parent > a::after { display: none; }
-}
-
-.site-navigation {
-  @include breakpoint(small only) {
-    padding: 0; // prevents container visibility on small screens
-  }
-}
-
-// WP post navigation
-.post-navigation {
-  @include clearfix;
-}
-
-.nav-previous {
-  float:left;
-}
-
-.nav-next {
-  float:right;
-}
